docs/envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:8080",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "add_user_agent": true,
            "idle_timeout_s": 840,
            "access_log": [
              {
                "path": "/var/log/envoy/egress_http.log"
              }
            ],
            "stat_prefix": "egress_http",
            "use_remote_address": true,
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "grpc1",
                  "domains": [
                    "grpc1",
                    "grpc1:8080",
                    "localhost"
                  ],
                  "routes": [
                    {
                      "prefix": "/",
                      "cluster": "grpc1"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/var/log/envoy/admin_access.log",
    "address": "tcp://0.0.0.0:9901"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "grpc1",
        "connect_timeout_ms": 250,
        "type": "static",
        "lb_type": "round_robin",
        "features": "http2",
        "hosts": [
          {
            "url": "tcp://192.168.88.240:8081",
            "url": "tcp://192.168.88.240:8082"
          }
        ]
      }
    ]
  }
}
